--- a/src/app.html
+++ b/src/app.html
@@ -7,8 +7,10 @@
     %svelte.head%
   </head>
   <body>
-    <div class="bg-gradient-to-r from-cyan-500 to-blue-500 h-screen">
-      %svelte.body%
-    </div>
+  	<div class="h-screen bg-amber-50 py-6 md:py-32">
+		<div class="container mx-auto p-6 md:p-16 border-8 border-purple bg-white flex">
+			%svelte.body%
+		</div>
+	</div>
   </body>
 </html>
